--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.mjs"
   },
   "dependencies": {
+    "express": "^4.21.2",
+    "multer": "^1.4.5-lts.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "@google/genai": "^1.33.0"
